Make screenshots match

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <body>
   <header class="pad-t max-length">
     <article class="gutter-1-2">
-      <h1 class="giga text-center not-bold">Queen of the Black Coast</h1>
+      <h1 class="giga text-center not-bold push-0">Queen of the Black Coast</h1>
       <p class="text-center italic micro">By Robert E. Howard, 1934</p>
       <hr class="push-2">
     </article>
   </header>
-  <div class="max-length">
-    <h2 class="mega">1. Conan Joins the Pirates</h2>
+  <div class="max-length gutter-1-2">
+    <h2 class="mega push-2">1. Conan Joins the Pirates</h2>
     <blockquote>
-      <p class="italic milli">Believe green buds awaken in the spring, <br>That autumn paints the leaves with somber fire;<br> Believe I held my heart inviolate<br>To lavish on one man my hot desire.<br></p>
-      <footer>
+      <p class="italic milli push-0">Believe green buds awaken in the spring, <br>That autumn paints the leaves with somber fire;<br> Believe I held my heart inviolate<br>To lavish on one man my hot desire.<br></p>
+      <footer class="push-2">
         <cite class="micro not-italic">— The Song of Bélit</cite>
       </footer>
     </blockquote>
